<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="TextView"
        android:textIsSelectable="false"
        android:textSize="50sp"
        android:textColor="@color/White"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView4"
        android:gravity="center_horizontal|center">

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button20"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button23"
            android:background="@drawable/button_color_2"
            android:onClick="multiply"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:textColor="@color/White"/>

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button18"
            android:background="@drawable/button_color"
            android:onClick="percentage"
            android:text="@string/percentage"
            android:textSize="25sp"
            android:textColor="@color/lightGray"/>

        <Button
            android:id="@+id/button26"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button21"
            android:layout_margin="5dp"
            android:background="@drawable/button_color"
            android:onClick="addFour"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button33"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button29"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button32"
            android:background="@drawable/button_color_2"
            android:onClick="plus"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textColor="@color/White"/>

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button19"
            android:background="@drawable/button_color_2"
            android:onClick="divide"
            android:text="@string/slash"
            android:textSize="30sp"
            android:textColor="@color/White"/>

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button18"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button21"
            android:background="@drawable/button_color"
            android:onClick="addEight"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button34"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button27"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button30"
            android:background="@drawable/button_color"
            android:onClick="addTwo"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button36"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignStart="@+id/button32"
            android:layout_below="@+id/button32"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/button35"
            android:background="@drawable/button_color"
            android:onClick="addDecimal"
            android:text="@string/decimal"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button35"
            android:layout_width="186dp"
            android:layout_height="80dp"
            android:layout_below="@+id/button30"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_color"
            android:onClick="addZero"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button27"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button22"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button26"
            android:background="@drawable/button_color"
            android:onClick="addFive"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button29"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button24"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button28"
            android:background="@drawable/button_color_2"
            android:onClick="minus"
            android:text="@string/minus"
            android:textSize="30sp"
            android:textColor="@color/White"/>

        <Button
            android:id="@+id/button37"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button33"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button36"
            android:background="@drawable/button_color_2"
            android:onClick="equal"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textColor="@color/White"/>

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_color"
            android:onClick="clear"
            android:text="@string/ac"
            android:textSize="25sp"
            android:textColor="@color/lightGray"/>

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button17"
            android:layout_margin="5dp"
            android:background="@drawable/button_color"
            android:onClick="addSeven"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button32"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button28"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button34"
            android:background="@drawable/button_color"
            android:onClick="addThree"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button17"
            android:background="@drawable/button_color"
            android:onClick="posornega"
            android:text="@string/plusminus"
            android:textSize="25sp"
            android:textColor="@color/lightGray"/>

        <Button
            android:id="@+id/button30"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button26"
            android:layout_margin="5dp"
            android:background="@drawable/button_color"
            android:onClick="addOne"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button19"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button22"
            android:background="@drawable/button_color"
            android:onClick="addNine"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button28"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/button23"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/button27"
            android:background="@drawable/button_color"
            android:onClick="addSix"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:textStyle="bold"/>
    </RelativeLayout>


</RelativeLayout>

